--- a/castrillo-eventos/package.json
+++ b/castrillo-eventos/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "framer-motion": "^11.3.31",
     "mapbox-gl": "^3.6.0",
     "react": "^18.3.1",
