--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "swiper": "^11.1.12",
     "web-vitals": "^2.1.4"
   },
