--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-map-gl": "^7.1.7",
+    "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
